tests/derive_ui/flatten_struct_in_enum.stderr
error[E0277]: the trait bound `SubCmd: Subcommand` is not satisfied
 --> tests/derive_ui/flatten_struct_in_enum.rs:1:10
  |
1 | #[derive(clap::Parser)]
  |          ^^^^^^^^^^^^ the trait `Subcommand` is not implemented for `SubCmd`
  |
  = note: this error originates in the derive macro `clap::Parser` (in Nightly builds, run with -Z macro-backtrace for more info)
